Fixing restaurants-list overflow and item order

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+	overflow: auto;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -147,6 +148,7 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+	float: left;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
